--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,194 @@
-div {
-    font-size: 50px;
-    font-family: "open_sansregular";
+body {
+    display: flex;
+    flex-direction: row;
+}
+.left-side {
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
+.sidebar img {
+    width: 35vw;
+    height: 100vh;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.logo {
+    position: absolute;
+    top: 160px;
+    background-color: rgba(33, 29, 29, 0.5);
+    height: 100px;
+    width: 35vw;
+}
+
+.logo-format {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+    gap: 10px;
+}
+
+.logo-format img {
+    height: 5rem;
+}
+
+
+.logo-text {
+    color: white;
+    font-family: 'norsebold';
+    font-size: 4rem;
+}
+
+
+.right-side {
+    background-color: rgb(250, 250, 250);
+    width: 70vw;
+    height: 100vh;
+}
+
+.paragraph {
+    padding-left: 30px;
+    padding-top: 100px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    font-family: 'open_sansregular';
+    padding-bottom: 50px;
+}
+
+.form-area {
+    background-color: white;
+    box-shadow: 0.5px 5px rgba(245, 245, 245, .8);
+    font-family: 'open_sansregular';
+    font-weight: bold;
+    font-size: 1.4rem;
+    padding-top: 5px;
+    padding-left: 30px;
+}
+
+.form-top, .form-middle, .form-bottom {
+    display: flex;
+    justify-content: flex-start;
+    gap: 4rem;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+    font-size: 0.6rem;
+    letter-spacing: 0.1rem;
+}
+
+.form-row input:focus {
+    outline-color: #87A3FF;
+}
+
+.form-row input{
+    border: 1px solid #D5D5D5;
+    border-radius: 4px;
+    padding: 4px; 
+    background-color: rgba(236, 236, 236, 0.1);
+}
+
+.signup-area {
+    padding: 30px;
+}
+.signup-area button {
+    padding: 15px;
+    width: 12rem;
+    border-radius: 8px;
+    background-color: #7BAE85;
+    border: 1px solid #7BAE85;
+    color: white;
+    font-family: 'open_sansregular';
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.signup-area button:hover {
+    background-color: #7D9A82;
+    border: 1px solid #7D9A82;
+    cursor: pointer;
+}
+
+.account-info {
+    padding-top: 30px;
+    display: flex;
+    gap: 5px;
+    font-family: 'open_sansregular';
+}
+
+.login-text {
+    color: #7BAE85;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 400px) {
+    body {
+        flex-direction: column;
+    }
+
+    .sidebar img {
+        width: 100vw;
+        height: 20vh;
+    }
+
+    .logo {
+        top: 40px;
+        height: 100px;
+        width: 100vw;
+    }
+
+    .right-side {
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .paragraph {
+        padding-left: 0;
+        padding-top: 0;
+        padding-right: 30px;
+        padding-bottom: 0;
+        text-align: center;
+    }
+
+    .form-area {
+        padding-top: 10px;
+        padding-left: 0;
+        padding-right: 30px;
+        text-align: center;
+        box-shadow: none;
+    }
+
+    .form-top, .form-middle, .form-bottom {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        padding-bottom: 20px;
+    }
+
+    .form-row {
+        padding-bottom: 10px;
+    }
+
+    .form-row input {
+        width: 60vw;
+    }
+
+    .signup-area {
+        text-align: center;
+        padding-right: 60px;
+    }
+
+    .account-info {
+        display: flex;
+        justify-content: center;
+    }
+}
