--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'norsebold';
-    src: url('norse-bold-webfont.woff2') format('woff2'),
-         url('norse-bold-webfont.woff') format('woff');
+    src: url('../fonts/norse-bold-webfont.woff2') format('woff2'),
+         url('../fonts/norse-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -16,9 +16,8 @@
 
 @font-face {
     font-family: 'open_sansregular';
-    src: url('opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
-         url('opensans-variablefont_wdthwght-webfont.woff') format('woff');
+    src: url('../fonts/opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-variablefont_wdthwght-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
