--- a/styles.css
+++ b/styles.css
@@ -206,8 +206,8 @@ body {
 
 @font-face {
     font-family: 'norsebold';
-    src: url('../fonts/norse-bold-webfont.woff2') format('woff2'),
-         url('../fonts/norse-bold-webfont.woff') format('woff');
+    src: url('./fonts/norse-bold-webfont.woff2') format('woff2'),
+         url('./fonts/norse-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -218,8 +218,8 @@ body {
 
 @font-face {
     font-family: 'open_sansregular';
-    src: url('../fonts/opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
-         url('../fonts/opensans-variablefont_wdthwght-webfont.woff') format('woff');
+    src: url('./fonts/opensans-variablefont_wdthwght-webfont.woff2') format('woff2'),
+         url('./fonts/opensans-variablefont_wdthwght-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
